<resources>
    <string name="app_name">Swoosh</string>
    <string name="background_image">background image</string>
    <string name="app_logo">app logo</string>
    <string name="desired_league">Desired league:</string>
    <string name="mens_text">Mens</string>
    <string name="mens_on">Mens</string>
    <string name="mens_off">Mens</string>
    <string name="womens_text">Womens</string>
    <string name="womens_on">Womens</string>
    <string name="womens_off">Womens</string>
    <string name="co_ed_text">Co-Ed</string>
    <string name="co_ed_on">Co-Ed</string>
    <string name="co_ed_off">Co-Ed</string>
    <string name="next_button">NEXT</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="find_a_team"><![CDATA[Find a team in your city & dominate the league]]></string>
    <string name="get_started">GET STARTED</string>
    <string name="i_am_text">I am a:</string>
    <string name="beginner_text">BEGINNER</string>
    <string name="beginner_on">BEGINNER</string>
    <string name="beginner_off">BEGINNER</string>
    <string name="baller_text">BALLER</string>
    <string name="baller_on">BALLER</string>
    <string name="baller_off">BALLER</string>
    <string name="finish">FINISH</string>
    <string name="search_league">Looking for a co-ed beginner league near you...</string>
</resources>
