<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Controller.SkillActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/beginnerballerbg"
            android:id="@+id/skill_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:scaleType="centerCrop"
            android:contentDescription="@string/background_image"/>
    <ImageView
            android:layout_width="88dp"
            android:layout_height="29dp" app:srcCompat="@drawable/swooshlogo"
            android:id="@+id/logo"
            android:scaleType="fitCenter" android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="@+id/skill_background" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:contentDescription="@string/app_logo"/>
    <TextView
            android:text="@string/i_am_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/i_am_text" android:fontFamily="@font/montserrat"
            android:textSize="18sp" android:textColor="@android:color/white" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/logo"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:layout_marginTop="60dp"
            app:layout_constraintTop_toBottomOf="@+id/i_am_text" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp">
        <ToggleButton
                android:text="@string/beginner_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/beginnerButton" android:layout_weight="1"
                android:background="@drawable/swoosh_toggle" android:textColor="@android:color/white"
                android:textOff="@string/beginner_off" android:textOn="@string/beginner_on"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/montserrat" android:onClick="onBeginnerClicked"/>
        <ToggleButton
                android:text="@string/baller_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/ballerButton" android:layout_weight="1"
                android:background="@drawable/swoosh_toggle" android:textColor="@android:color/white"
                android:textOff="@string/baller_off" android:textOn="@string/baller_on" android:layout_marginStart="8dp"
                android:fontFamily="@font/montserrat" android:onClick="onBallerClicked"/>
    </LinearLayout>
    <Button
            android:text="@string/finish"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/finishSkillButton" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/skill_background" android:textColor="@android:color/white"
            android:background="@drawable/swoosh_button" android:textSize="18sp" android:fontFamily="@font/montserrat"
            android:onClick="onFinishSkillClicked"/>

</android.support.constraint.ConstraintLayout>